[PQP-3477]: fix spacing

--- a/src/style/components/_card.scss
+++ b/src/style/components/_card.scss
@@ -36,7 +36,7 @@
   &__subtitle {
     font-size: $font-size-m;
     color: $blue-grey-2;
-    margin-bottom: 8px;
+    margin-bottom: 20px;
     line-height: 1;
   }
 
